Rename KDELibs astyle formatting and fix its pointer alignment

Rename the "KDELibs" Artistic Style code formatting preset to "KDE
Frameworks" and fix pointer alignment for it which was set to
PTR_ALIGN_TYPE instead of PTR_ALIGN_NAME. Also add a test in
testPointerAlignment() for general pointer and reference alignments and
add various tests in testKdeFrameworks() to verify that the KDE
Frameworks formatting styles are matched by the automatic formatting.

BUG: 427109
FIXED-IN: 5.7.0