plugins/astyle/astyle_formatter.cpp
@@ -264,11 +264,11 @@ bool AStyleFormatter::predefinedStyle( const QString & style )
         setNamespaceIndent(false);
         return true;
     } else if (style == QLatin1String("KDELibs")) {
-        // https://community.kde.org/Policies/Kdelibs_Coding_Style
+        // https://community.kde.org/Policies/Frameworks_Coding_Style
         resetStyle();
         setSpaceIndentation(4);
         setBracketFormatMode(astyle::LINUX_MODE);
-        setPointerAlignment(astyle::PTR_ALIGN_TYPE);
+        setPointerAlignment(astyle::PTR_ALIGN_NAME);
         setLabelIndent(true);
         setOperatorPaddingMode(true);
         setParensInsidePaddingMode(false);
